    sufficient for automatically removing the core dump, it doesn't
    need to be perfect. This is in accordance with not setting the
    apport-failed-retrace tag for useful, but non-perfect retraces any
    more.
  * apport/hookutils.py, backends/packaging_rpm.py: Convert usage of
    md5 module (which is deprecated in 2.6) to hashlib.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Feb 2009 22:06:08 +0100

apport (0.137) jaunty; urgency=low

  * Set python-version to all, include symlinks in the package.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 24 Feb 2009 21:22:36 +0100

apport (0.136) jaunty; urgency=low

  [ Andy Whitcroft ]
  * bin/apportcheckresume: remove originator in suspend/hibernate/resume
    reporting.  This was intended for debugging only and is now redundant.
  * bin/apportcheckresume, apport/report.py: when collecting resume failures
    in very early boot hal may not be running and we thus unable to obtain
    the machine type information.  Move title generation to the reporting
    engine.

  [ Martin Pitt ]
  * debian/local/apport-collect: Add user environment information, too
    (LANG, PATH, SHELL). (LP: #332578)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Feb 2009 14:25:21 +0100

apport (0.135) jaunty; urgency=low

  * problem_report.py, test_write_mime_text(): Add test cases for
    single-line and two-line UTF-8 values, single-line and two-line
    Unicode values and a single-line LF-terminated value. Fix handling
    of the latter two.
  * problem_report.py, test_write(): Add test cases for single-line
    and two-line UTF-8 and Unicode values, and fix handling of these
    in write().
  * debian/local/apport-collect: Collect package, OS, and user
    information as well. (LP: #332578)
  * package-hooks/source_apport.py: Robustify by using hookutils, and
    avoid stat errors if /var/crash/* does not exist.
  * test-hooks: Update dodgy test for uninstalled package,
    libdb4.3-tcl is not available in Jaunty any more.
